k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-hunt-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-hunt
  template:
    metadata:
      labels:
        app: product-hunt
    spec:
      containers:
      - name: product-hunt
        image: admantbhuvi/product-hunt-frontend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
