k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-hunt-service
spec:
  type: NodePort
  selector:
    app: product-hunt
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
